--- a/ui_construction/WP71Demo/AppResources.resx
+++ b/ui_construction/WP71Demo/AppResources.resx
@@ -117,31 +117,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AppTitle" xml:space="preserve">
+  <data name="AppTitleString" xml:space="preserve">
     <value>UI Construct</value>
   </data>
-  <data name="lightCheck" xml:space="preserve">
+  <data name="lightCheckString" xml:space="preserve">
     <value>Load the lite version</value>
   </data>
-  <data name="loginBox" xml:space="preserve">
+  <data name="loginBoxString" xml:space="preserve">
     <value>Signin</value>
   </data>
   <data name="MessageBoxString" xml:space="preserve">
     <value>Message popup!</value>
   </data>
-  <data name="passwdBox" xml:space="preserve">
+  <data name="passwdBoxString" xml:space="preserve">
     <value>Insert Password</value>
   </data>
   <data name="passwdString" xml:space="preserve">
     <value>Password</value>
   </data>
-  <data name="privateRadio" xml:space="preserve">
+  <data name="privateRadioString" xml:space="preserve">
     <value>Select for Private Computer</value>
   </data>
-  <data name="publicRadio" xml:space="preserve">
+  <data name="publicRadioString" xml:space="preserve">
     <value>Select for Public Computer</value>
   </data>
-  <data name="usernameBox" xml:space="preserve">
+  <data name="usernameBoxString" xml:space="preserve">
     <value>Insert Username</value>
   </data>
   <data name="usernameString" xml:space="preserve">
