--- a/ui_construction/WP71Demo/AppResources.fi.resx
+++ b/ui_construction/WP71Demo/AppResources.fi.resx
@@ -117,31 +117,31 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AppTitle" xml:space="preserve">
+  <data name="AppTitleString" xml:space="preserve">
     <value>UI Ohjelma</value>
   </data>
-  <data name="lightCheck" xml:space="preserve">
+  <data name="lightCheckString" xml:space="preserve">
     <value>Lataa kevyt versio</value>
   </data>
-  <data name="loginBox" xml:space="preserve">
+  <data name="loginBoxString" xml:space="preserve">
     <value>Kirjaudu</value>
   </data>
   <data name="MessageBoxString" xml:space="preserve">
     <value>viesti popuppi</value>
   </data>
-  <data name="passwdBox" xml:space="preserve">
+  <data name="passwdBoxString" xml:space="preserve">
     <value>Syota Salasana</value>
   </data>
   <data name="passwdString" xml:space="preserve">
     <value>salasana</value>
   </data>
-  <data name="privateRadio" xml:space="preserve">
+  <data name="privateRadioString" xml:space="preserve">
     <value>Privaatti kone</value>
   </data>
-  <data name="publicRadio" xml:space="preserve">
+  <data name="publicRadioString" xml:space="preserve">
     <value>Julkinen kone</value>
   </data>
-  <data name="usernameBox" xml:space="preserve">
+  <data name="usernameBoxString" xml:space="preserve">
     <value>Syota Kayttajanimi</value>
   </data>
   <data name="usernameString" xml:space="preserve">
